Add screenshot of project

--- a/sonic-lisp.org
+++ b/sonic-lisp.org
@@ -26,6 +26,9 @@ This project is a clone of Sonic The Hedgehog's Sega Genesis engine,
 which aims to replicate the physics of the mascot's classic games as
 much as possible.
 
+#+ATTR_LATEX: :width \linewidth
+[[file:images/screenshot.png]]
+
 ** Disclaimer
 
 I do not  own Sonic The Hedgehog  or any of the  related characters on
