Scale viewport to window size

--- a/sonic-lisp.org
+++ b/sonic-lisp.org
@@ -1394,6 +1394,8 @@ movements) is inspired by the [[https://info.sonicretro.org/Sonic_Physics_Guide]
 #+begin_src lisp
 (defmethod gamekit:act ((app sonic-game))
   (when *game-start*
+    (when (pressed-p :select)
+      (reset))
     (update-delta-time)
     (update-input)
     (update-player *player* *dt*)))
@@ -1440,32 +1442,38 @@ movements) is inspired by the [[https://info.sonicretro.org/Sonic_Physics_Guide]
 
 #+begin_src lisp
 (defmethod gamekit:draw ((app sonic-game))
-  ;; Prototype loading screen
-  (when (and *basic-rendering-ok*
-         (not *game-start*))
-    (gamekit:with-pushed-canvas ()
-      (gamekit:draw-rect (gamekit:vec2 0 0)
-                         (gameprop :window-width)
-                         (gameprop :window-height)
-                         :fill-paint +black+
-                         :stroke-paint +black+))
-    (gamekit:with-pushed-canvas ()
-      (gamekit:translate-canvas
-       (- (/ (gameprop :window-width) 2) 50)
-       (- (/ (gameprop :window-height) 2) 5))
-      (gamekit:draw-text "Now Loading"
-                         (gamekit:vec2 0 0)
-                         :fill-color +white+
-                         :font *font-gohu-11*)))
-  ;; Game rendering
-  (when *game-start*
-    (gamekit:with-pushed-canvas ()
-      (mapcar (lambda (img)
-                (gamekit:draw-image +origin+ img))
-              '(:bg-layer0 :bg-layer1 :bg-layer2
-                :bg-layer3 :bg-layer4 :bg-layer5))
-      (draw-debug-panel)
-      (draw-player *player*))))
+  (gamekit:with-pushed-canvas ()
+    ;; Screen fit
+    (gamekit:scale-canvas (/ (gamekit:viewport-width)
+                             (gameprop :window-width))
+                          (/ (gamekit:viewport-height)
+                             (gameprop :window-height)))
+    ;; Prototype loading screen
+    (when (and *basic-rendering-ok*
+               (not *game-start*))
+      (gamekit:with-pushed-canvas ()
+        (gamekit:draw-rect (gamekit:vec2 0 0)
+                           (gameprop :window-width)
+                           (gameprop :window-height)
+                           :fill-paint +black+
+                           :stroke-paint +black+))
+      (gamekit:with-pushed-canvas ()
+        (gamekit:translate-canvas
+         (- (/ (gameprop :window-width) 2) 50)
+         (- (/ (gameprop :window-height) 2) 5))
+        (gamekit:draw-text "Now Loading"
+                           (gamekit:vec2 0 0)
+                           :fill-color +white+
+                           :font *font-gohu-11*)))
+    ;; Game rendering
+    (when *game-start*
+      (gamekit:with-pushed-canvas ()
+        (mapcar (lambda (img)
+                  (gamekit:draw-image +origin+ img))
+                '(:bg-layer0 :bg-layer1 :bg-layer2
+                  :bg-layer3 :bg-layer4 :bg-layer5))
+        (draw-debug-panel)
+        (draw-player *player*)))))
 #+end_src
 
 #+RESULTS:
